--- a/index.html
+++ b/index.html
@@ -1,16 +1,92 @@
 <!DOCTYPE html>
 <html lang="ja">
-<title>練習</title>
 <head>
-  <div id="header">
-  </div>
+  <meta charset="utf-8" />
+  <title>デモサイト</title>
+  <meta name="viewport" content="width=device-width" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <div id="main">
-    <div id="left">
-    <div id="right">
+  <div id="container">
+    <header>
+      <h4>ヘッダー</h4>
+    </header>
+    <nav>
+       <h4>ナビ</h4>
+       <ul>
+         <div class="nav1">
+           <il><a href="#">テキスト１</a></il>
+         </div>
+         <div class="nav2">
+           <il><a href="#">テキスト１</a></il>
+         </div>
+         <div class="nav3">
+           <il><a href="#">テキスト１</a></il>
+         </div>
+         <div class="nav4">
+           <il><a href="#">テキスト１</a></il>
+         </div>
+         <div class="nav5">
+           <il><a href="#">テキスト１</a></il>
+         </div>
+       </ul>
+    </nav>
+    <article>
+    <div class="box">
+      <div class="boxA">
+        <div class="box1">
+          <h4>サイドメニュー</h4>
+          <ul>
+            <li>
+              リンクテキスト
+            </li>
+            <li>
+              リンクテキスト
+            </li>
+            <li>
+              リンクテキスト
+            </li>
+            <li>
+              リンクテキスト
+            </li>
+          </ul>
+        </div>
+        <div class="box2">
+          <h4>メインコンテンツ</h4>
+          <p>
+            テキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキスト
+        </div>
+      </div>
+      <div class="boxB">
+        <div class="box3">
+        <h4>サイドメニュー２</h4>
+        <ul>
+          <li>
+            リンクテキスト
+          </li>
+          <li>
+            リンクテキスト
+          </li>
+          <li>
+            リンクテキスト
+          </li>
+          <li>
+            リンクテキスト
+          </li>
+        </ul>
+       </div>
+      </div>
     </div>
-    </div>
+    </article>
+    <footer>
+      <h4>footer</h4>
+    </footer>
   </div>
+
 </body>
 </html>
