--- a/inedex2.html
+++ b/inedex2.html
@@ -42,8 +42,7 @@
     </nav>
     <article>
     <div class="box">
-      <div class="boxA">
-        <div class="left">
+        <div class="box1">
           <h4>サイドメニュー</h4>
           <ul>
             <li><a href="#">リンクテキスト</a></li>
@@ -52,7 +51,7 @@
             <li><a href="#">リンクテキスト</a></li>
           </ul>
         </div>
-        <div class="right">
+        <div class="box2">
           <h4>メインコンテンツ</h4>
           <p>
             テキストテキストテキストテキストテキスト
@@ -70,8 +69,7 @@
             テキストテキストテキストテキストテキスト
           </p>
         </div>
-      </div>
-        <div class="sidemenu">
+        <div class="box3">
         <h4>サイドメニュー２</h4>
         <ul>
           <li><a href="#">リンクテキスト</a></li>
